--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.body {
+  text-align: center;
+}
+
 .navbar {
   background-color: #fff !important;
 }
@@ -22,5 +26,18 @@ footer {
   margin-top: 100px;
   text-decoration: none;
   background-repeat: no-repeat;
+}
+
+.row {
+  margin: 100px auto 0 auto;
+}
+
+.row img {
+  width: 65%;
+}
+
+.row h2 {
+  font-size: 1em;
+  padding: 5px 0 10px 0;
 }
 /*# sourceMappingURL=style.css.map */
