--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,7 @@
+.body {
+    text-align: center;
+}
+
 .navbar {
     background-color: #fff !important;
 
@@ -20,4 +24,15 @@ footer {
     margin-top: 100px;
     text-decoration: none;
     background-repeat: no-repeat;
+}
+
+.row {
+    img {
+        width: 65%;
+    }
+    h2 {
+        font-size: 1em;
+        padding: 5px 0 10px 0;
+    }
+    margin: 100px auto 0 auto;
 }
