--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+@charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 微軟正黑體;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-weight: 800;
+}
+
 .body {
   text-align: center;
 }
@@ -11,13 +21,44 @@
   color: black;
   -webkit-transition: 0.6s;
   transition: 0.6s;
-  padding: 0.5px;
+  padding: 10px;
 }
 
 .carousel img {
   height: 80vh;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.link {
+  float: right;
+  padding: 40px 0;
+}
+
+.link a {
+  color: #fff;
+  text-decoration: none;
+  /* 內距：上下 左右 */
+  padding: 5px 15px;
+  /* 字體粗細 0 - 900 */
+  font-weight: 800;
+}
+
+.link a:hover {
+  background-color: #fdfdfd;
+  color: black;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+#brands {
+  text-align: center;
+  letter-spacing: 10px;
+  margin-top: 150px;
+}
+
+p {
+  margin-top: 50px;
 }
 
 footer {
@@ -28,12 +69,18 @@ footer {
   background-repeat: no-repeat;
 }
 
+footer #copy {
+  padding-top: 50px;
+  font-size: 0.5em;
+  text-align: center;
+}
+
 .row {
   margin: 100px auto 0 auto;
 }
 
 .row img {
-  width: 65%;
+  width: 80%;
 }
 
 .row h2 {
