--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 微軟正黑體;
+    box-sizing: border-box;
+    font-weight: 800;
+}
+
 .body {
     text-align: center;
 }
@@ -10,7 +18,7 @@
     background-color: rgba(0,0,0,0.1);
     color: black;
     transition: 0.6s; 
-    padding: 0.5px;
+    padding: 10px;
 }
 
 .carousel img {
@@ -18,17 +26,55 @@
     object-fit: cover;
 }
 
+.link {
+    float: right;
+    padding: 40px 0;
+}
+
+.link a {
+    color: #fff;
+    text-decoration: none;
+    /* 內距：上下 左右 */
+    padding: 5px 15px;
+    /* 字體粗細 0 - 900 */
+    font-weight: 800;
+}
+
+.link a:hover {
+    background-color: rgb(253, 253, 253);
+    color: black;
+    transition: 0.6s;
+}
+
+#brands {
+    text-align: center;
+    letter-spacing:10px;
+    margin-top: 150px;
+    }
+    p {
+        margin-top: 50px;
+    }
+
+
 footer {
     background-color: #414040;
     color: #fff;
     margin-top: 100px;
     text-decoration: none;
     background-repeat: no-repeat;
+    
+    
+}
+
+footer #copy {
+    padding-top: 50px;
+    font-size: 0.5em;
+    text-align: center;
 }
 
 .row {
     img {
-        width: 65%;
+        width: 80%;
     }
     h2 {
         font-size: 1em;
