--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 微軟正黑體;
+  font-family: 'Merriweather', serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-weight: 800;
@@ -62,7 +62,8 @@ p {
 }
 
 footer {
-  background-color: #414040;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 0, 0, 0)), to(#575555));
+  background-image: linear-gradient(to right, rgba(255, 0, 0, 0), #575555);
   color: #fff;
   margin-top: 100px;
   text-decoration: none;
@@ -80,7 +81,7 @@ footer #copy {
 }
 
 .row img {
-  width: 80%;
+  width: 90%;
 }
 
 .row h2 {
@@ -92,5 +93,34 @@ footer #copy {
   margin-top: 30px;
   margin-left: 30px;
   height: 4vh;
+}
+
+.aboutA {
+  color: white;
+  background-image: -webkit-gradient(linear, right top, left top, from(rgba(255, 0, 0, 0)), to(red));
+  background-image: linear-gradient(to left, rgba(255, 0, 0, 0), red);
+}
+
+.aboutA h2 {
+  font-family: 'Roboto Mono', monospace;
+  margin-left: 150px;
+}
+
+.aboutB {
+  text-align: center;
+}
+
+.aboutB h3 {
+  color: #fa0606;
+  margin-top: 100px;
+}
+
+.aboutB p {
+  padding: 50px;
+  width: 600px;
+}
+
+.container img {
+  height: 290px;
 }
 /*# sourceMappingURL=style.css.map */
