--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap");
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Merriweather', serif;
+  font-family: 'Merriweather Sans', sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-weight: 800;
@@ -16,7 +17,19 @@
   background-color: #fff !important;
 }
 
-.nav-item a:hover {
+.nav-item {
+  -webkit-transform: skew(-38deg);
+          transform: skew(-38deg);
+  padding: 0 5px;
+}
+
+.nav-item > a {
+  -webkit-transform: skew(38deg);
+          transform: skew(38deg);
+  letter-spacing: 2px;
+}
+
+.nav-item:hover {
   background-color: rgba(0, 0, 0, 0.1);
   color: black;
   -webkit-transition: 0.6s;
@@ -62,8 +75,8 @@ p {
 }
 
 footer {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 0, 0, 0)), to(#575555));
-  background-image: linear-gradient(to right, rgba(255, 0, 0, 0), #575555);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 0, 0, 0)), to(#9c9a9a));
+  background-image: linear-gradient(to right, rgba(255, 0, 0, 0), #9c9a9a);
   color: #fff;
   margin-top: 100px;
   text-decoration: none;
@@ -96,13 +109,13 @@ footer #copy {
 }
 
 .aboutA {
+  height: 130px;
   color: white;
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(255, 0, 0, 0)), to(red));
   background-image: linear-gradient(to left, rgba(255, 0, 0, 0), red);
 }
 
 .aboutA h2 {
-  font-family: 'Roboto Mono', monospace;
   margin-left: 150px;
 }
 
@@ -118,9 +131,169 @@ footer #copy {
 .aboutB p {
   padding: 50px;
   width: 600px;
+  margin: 0 auto;
 }
 
 .container img {
   height: 290px;
+}
+
+/*product*/
+#product-container {
+  min-height: 607px;
+  margin-top: 100PX;
+}
+
+#product-link {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#product-link div {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+  padding: 5px 15px;
+  font-weight: 800;
+  font-size: 30px;
+}
+
+#product-link div:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+.product-link-color {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white !important;
+}
+
+.product-area {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px 30px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.product-box {
+  padding: 0 10px;
+}
+
+.product-img-box {
+  overflow: hidden;
+  min-height: 250px;
+  margin: 20px;
+  padding: 15px;
+}
+
+.product-img-box img {
+  width: 100%;
+  margin: 10px auto;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.product-img-box img:hover {
+  -webkit-transform: scale(1.15);
+          transform: scale(1.15);
+}
+
+.product-box h2 {
+  font-size: 25px;
+  text-align: center;
+  font-weight: bold;
+}
+
+/*表單*/
+label {
+  font-size: 18px;
+}
+
+form {
+  background-color: #eee;
+  width: 600px;
+  height: 850px;
+  margin: 100px auto 0 auto;
+  padding: 30px;
+  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  text-align: left;
+}
+
+#company, #name, #email, #phone, #message {
+  width: 100%;
+  padding: 10px 5px;
+  margin: 10px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 0.5px solid rgba(0, 0, 0, 0.1);
+}
+
+fieldset {
+  border: 0.5px solid rgba(0, 0, 0, 0.1) !important;
+  margin: 10px 0 !important;
+  padding: 10px !important;
+}
+
+.btn1 {
+  width: 40%;
+  height: 50px;
+  color: #999;
+  font-size: 16px;
+  font-weight: 500;
+  margin: 10px;
+}
+
+.btn1:hover {
+  border: 3px solid rgba(34, 172, 214, 0.671);
+}
+
+#button {
+  text-align: center;
+  margin-top: 10px;
+}
+
+/* 預留文字 */
+::-webkit-input-placeholder {
+  color: #ccc;
+}
+:-ms-input-placeholder {
+  color: #ccc;
+}
+::-ms-input-placeholder {
+  color: #ccc;
+}
+::placeholder {
+  color: #ccc;
+}
+
+footer {
+  background-color: #414040;
+  color: #fff;
+  margin-top: 100px;
+}
+
+/*RWD*/
+/* 媒體為螢幕 並且 寬度大於 1024px - 桌機*/
+/* 媒體為螢幕 並且 寬度大於 1023px - 平板*/
+@media screen and (max-width: 1023px) {
+  .product-area {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+}
+
+/* 媒體為螢幕 並且 寬度小於 767px - 手機*/
+@media screen and (max-width: 767px) {
+  .product-area {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 /*# sourceMappingURL=style.css.map */
