--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap');
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Merriweather', serif;
+    font-family: 'Merriweather Sans', sans-serif;
     box-sizing: border-box;
     font-weight: 800;
 }
@@ -13,8 +14,22 @@
 .navbar {
     background-color: #fff !important;
 
- } 
-.nav-item a:hover {
+ }
+ .nav-item {
+    transform: skew(-38deg);
+    padding: 0 5px;
+ }
+ .nav-item > a {
+    transform: skew(38deg);
+    letter-spacing: 2px;
+ }
+// .nav-item a:hover {
+//     background-color: rgba(0,0,0,0.1);
+//     color: black;
+//     transition: 0.6s; 
+//     // padding: 8px;
+// }
+.nav-item:hover {
     background-color: rgba(0,0,0,0.1);
     color: black;
     transition: 0.6s; 
@@ -58,7 +73,7 @@
 
 
 footer {
-    background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(87, 85, 85));
+    background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(156, 154, 154));
     color: #fff;
     margin-top: 100px;
     text-decoration: none;
@@ -91,12 +106,11 @@ footer #copy {
 }
 
 .aboutA {
-    
+    height: 130px;
     color: white;
     background-image: linear-gradient(to left, rgba(255,0,0,0), rgba(255,0,0,1));
 
     h2 {
-        font-family: 'Roboto Mono', monospace;
         margin-left: 150px;
     }
 
@@ -114,7 +128,7 @@ footer #copy {
         
         padding: 50px;
         width: 600px;
-        
+        margin: 0 auto ;
        
     }
 
@@ -123,5 +137,137 @@ footer #copy {
 .container {
     img {
         height: 290px;
+    }
+}
+
+/*product*/
+#product-container {
+    min-height: 607px;
+    margin-top: 100PX;
+}
+#product-link {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+}
+#product-link div{
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
+    padding: 5px 15px;
+    font-weight: 800;
+    font-size: 30px;
+}
+#product-link div:hover{
+    background-color: rgba(0,0,0,0.8);
+    color: white;
+    transition: 0.6s;
+}
+.product-link-color {
+    background-color: rgba(0,0,0,0.8);
+    color: white!important; 
+}
+.product-area {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px 30px;
+    width: 80%;
+    margin: 0 auto;
+}
+.product-box {
+    padding: 0 10px;
+}
+.product-img-box {
+    overflow: hidden;
+    min-height: 250px;
+    margin: 20px;
+    padding: 15px;
+}
+.product-img-box img {
+    width: 100%;
+    margin: 10px auto;
+    transition: 1s;
+}
+.product-img-box img:hover {
+    transform: scale(1.15);
+}
+.product-box h2 {
+    font-size: 25px;
+    text-align: center;
+    font-weight: bold;
+}
+/*表單*/
+label {
+    font-size: 18px;
+  }
+  
+  form {
+    background-color: #eee;
+    width: 600px;
+    height: 850px;
+    margin: 100px auto 0 auto;
+    padding: 30px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+    text-align: left;
+  }
+
+  #company, #name, #email, #phone, #message {
+    width: 100%;
+    padding: 10px 5px;
+    margin: 10px 0;
+    box-sizing: border-box;
+    border: 0.5px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  fieldset {
+    border: 0.5px solid rgba(0, 0, 0, 0.1)!important;
+    margin: 10px 0!important;
+    padding: 10px!important;
+  }
+  
+  .btn1 {
+    width: 40%;
+    height: 50px;
+    color: #999;
+    font-size: 16px;
+    font-weight: 500;
+    margin: 10px;
+  }
+
+  .btn1:hover {
+      border: 3px solid rgba(34, 172, 214, 0.671);
+  }
+  
+  #button {
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+  /* 預留文字 */
+  ::placeholder {
+    color: #ccc;
+  }
+
+footer {
+        background-color: #414040;
+        color: #fff;
+        margin-top: 100px;
+}
+
+/*RWD*/
+/* 媒體為螢幕 並且 寬度大於 1024px - 桌機*/
+@media screen and (min-width: 1024px) {
+  
+}
+/* 媒體為螢幕 並且 寬度大於 1023px - 平板*/
+@media screen and (max-width: 1023px) {
+    .product-area {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+/* 媒體為螢幕 並且 寬度小於 767px - 手機*/
+@media screen and (max-width: 767px) {
+    .product-area {
+        grid-template-columns: 1fr;
     }
 }
